# sudoku

./: CMakeLists.txt
include/sudoku_solver/: reader.h
src/: main.cpp  reader.cpp
